@@ -61,11 +61,11 @@ public class AllTest {
      */
     @Test
     public void testAll() throws Exception {
-        clusterTest.testAll();
-        webTest.testAll();
+        /*clusterTest.testAll();
+        webTest.testAll();*/
         authTest.testAll();
-        notifyTest.testAll();
-        docTest.testAll();
+        /*notifyTest.testAll();
+        docTest.testAll();*/
     }
 
 }
